--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Around the U.S responsive page" />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Around the U.S.</title>
+    <link rel="favicon" href="./images/favicon_icons8-flag-50.png" />
   </head>
 
   <body class="page">
@@ -20,24 +21,22 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div class="profile__image_container">
-            <img
-              class="profile__image"
-              src="./images/jacques-cousteau.png"
-              alt="Jacques Cousteau image"
-            />
-          </div>
+          <img
+            class="profile__image"
+            src="./images/jacques-cousteau.png"
+            alt="Jacques Cousteau image"
+          />
 
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button type="button" class="profile__add-button"></button>
         </section>
 
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/yosemite.jpg"
@@ -46,7 +45,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -57,7 +56,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -68,7 +67,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -79,7 +78,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -90,7 +89,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -101,7 +100,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
           </ul>
