border for mobile view edit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Around the U.S responsive page" />
     <link rel="stylesheet" href="./pages/index.css" />
     <title>Around the U.S.</title>
-    <link rel="favicon" href="./images/favicon_icons8-flag-50.png" />
+    <link rel="icon" href="./images/favicon_icons8-flag-50.png" />
   </head>
 
   <body class="page">
