--- a/index.html
+++ b/index.html
@@ -110,6 +110,29 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container modal_opened">
+        <button class="modal__close"></button>
+        <form class="modal__form">
+          <p class="modal__heading">Edit Profile</p>
+          <input
+            class="modal__input"
+            type="text"
+            name="name"
+            placeholder="Name"
+            value="Jacques Cousteau"
+          />
+          <input
+            class="modal__input"
+            type="text"
+            name="About me"
+            placeholder="About me"
+            value="Explorer"
+          />
+          <button class="modal__button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="scripts/index.js"></script>
   </body>
 </html>
