project 4 stage 2 modifier fix

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </footer>
     </div>
     <div class="modal">
-      <div class="modal__container modal_opened">
+      <div class="modal__container">
         <button class="modal__close"></button>
         <form class="modal__form">
           <p class="modal__heading">Edit Profile</p>
