--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
     </div>
     <div class="modal" id="profile-modal-edit">
       <div class="modal__container modal__container_opened">
-        <button class="modal__close" id="profile-modal-close"></button>
+        <button
+          class="modal__close"
+          id="profile-modal-close"
+          type="button"
+        ></button>
         <form class="modal__form">
           <p class="modal__heading">Edit Profile</p>
           <input
@@ -58,6 +62,7 @@
             type="text"
             name="title"
             placeholder="Name"
+            required
           />
           <input
             class="modal__input"
@@ -65,6 +70,7 @@
             type="text"
             name="About me"
             placeholder="About me"
+            required
           />
           <button class="modal__button" type="submit">Save</button>
         </form>
@@ -81,6 +87,6 @@
       </li>
     </template>
 
-    <script src="scripts/index.js"></script>
+    <script src="scripts/index.js" defer></script>
   </body>
 </html>
